--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,18 @@
 .jumbotron {
     background: #E4CEDB;
 }
+
+body{
+    padding: 70px;
+}
+
+.navbar-inverse {
+    background: #E4CEDB;
+}
+
+.navbar-inverse .navbar-nav>li>a{
+    color: whitesmoke;
+}
+.spanH1{
+    color: whitesmoke;
+}
